<resources>
    <string name="app_name">MirrorAvatar</string>
    <string name="n_90_degree">90</string>
    <string name="n_180_degree">180</string>
    <string name="n_270_degree">270</string>
    <string name="n_0_degree">0</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="leftEyeCenterPoint">Left eye center:</string>
    <string name="leftIrisPoint">Left iris point:</string>
    <string name="rightEyeCenterPoint">Right eye center:</string>
    <string name="rightIrisPoint">Right iris point:</string>
</resources>