<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.edu.agh.sm.mirroravatar.MainActivity">

    <TextView
        android:id="@+id/leftEyeCenterPointLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:text="@string/leftEyeCenterPoint"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leftEyeCenterPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/leftIrisPointLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leftIrisPointLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:text="@string/leftIrisPoint"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/leftEyeCenterPointLabel" />

    <TextView
        android:id="@+id/leftIrisPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/leftIrisPointLabel"
        app:layout_constraintTop_toTopOf="@+id/leftEyeCenterPoint" />

    <TextView
        android:id="@+id/rightEyeCenterPointLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:text="@string/rightEyeCenterPoint"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftIrisPointLabel" />

    <TextView
        android:id="@+id/rightEyeCenterPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/rightIrisPointLabel"
        app:layout_constraintTop_toBottomOf="@+id/leftIrisPoint" />

    <TextView
        android:id="@+id/rightIrisPointLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:text="@string/rightIrisPoint"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rightEyeCenterPointLabel" />

    <TextView
        android:id="@+id/rightIrisPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/rightIrisPointLabel"
        app:layout_constraintTop_toBottomOf="@+id/rightEyeCenterPoint" />

    <TextView
        android:id="@+id/rotation_tv"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:text="@string/n_0_degree"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>